--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Hello World! I'm scsc3313</h1>
+
 <p>I'm hosted with GitHub Pages.</p>
+<script>
+alert("어서오세요!");
+</script>
+
 </body>
 </html>
