--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 
 <p>I'm hosted with GitHub Pages.</p>
 <script>
-alert("Helloworld!");
+alert("Hello world!");
+prompt("what's your Id?");
+
+
 </script>
 
 </body>
