--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <p>I'm hosted with GitHub Pages.</p>
 <script>
 alert("Hello world!");
-prompt("what's your Id?");
-
+var Id = prompt("what's your Id?");
+alert("Hello" + Id);
 
 </script>
 
