자기소개서 추가

--- a/index.html
+++ b/index.html
@@ -1,15 +1,150 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World! I'm scsc3313</h1>
+    <head>
+        <meta charset="utf-8">
+        <title>Hyun SeungHo &mdash; Résumé</title>
+        <meta name="viewport" content="width=device-width">
 
-<p>I'm hosted with GitHub Pages.</p>
-<script>
-alert("Hello world!");
-var Id = prompt("what's your Id?");
-alert("Hello" + Id);
+        <!-- syntax highlighting CSS -->
+        <link rel="stylesheet" href="/css/syntax.css">
 
-</script>
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="css/main.css" media="all">
+        <link rel="stylesheet" href="css/phone.css" media="all and (max-width:680px)">
+        <link rel="stylesheet" href="css/syntax.css"/>
 
-</body>
+    </head>
+    <body>
+
+        <div class="site">
+          <div class="header">
+            <h1 class="title">Hyun SeungHo</h1>
+            <a  class="extra " href="index.html">blog</a>
+            <a  class="extra  current " href="resume.html">résumé</a>
+            <a  class="extra " href="projects.html">projects</a>
+            
+            <a class="lang  current " href="resume.html">english</a>
+            <a class="lang " href="cv.html">français</a>
+            
+          </div>
+
+          <div class="content">
+            <p class="margin"><img src="주황버섯.png" alt="Face" /></p>
+
+<h2 id="rsum">자기소개</h2>
+
+<p><strong>안녕하세요. 저는 컴퓨터공학과 학생입니다.</strong><br />
+저는 웹 개발과 웹 디자인을 좋아합니다. <a href="https://github.com/scsc3313">github.com/scsc3313</a>.</p>
+
+<h3 class="clearer" id="employment">Employment</h3>
+
+<p class="margin time">Sept. 2014-Feb. 2015</p>
+
+<p><strong>Final project at <a href="http://www.cad.polito.it/">the CAD laboratory</a> of the
+Politecnico di Torino: improve the <a href="http://ugp3.sourceforge.net/">MicroGP</a> evolutionary computation
+optimizer.</strong> Research methodology, performance evaluation, software quality,
+object-oriented design in C++, embedding of the Lua language. </p>
+
+<p class="margin time">Summer 2013</p>
+
+<p id="sogilis"><strong>Two-month internship at the Lean startup <a href="http://sogilis.com/">Sogilis</a> in
+Grenoble:</strong> an accounting and cash management application. User interface
+design, rich web front-end using Ember.js, agile project management, unit testing.</p>
+
+<h3 id="education">Education</h3>
+
+<p class="margin time">2013-2014</p>
+
+<p><strong>Double degree at <a href="http://www.polito.it">Politecnico di Torino</a> in computer engineering.</strong></p>
+
+<p class="margin time">2011-2014</p>
+
+<p><strong>Engineering degree at <a href="http://ensimag.grenoble-inp.fr">Grenoble INP –
+Ensimag</a> in Computer Science, Information
+Systems and Mathematics.</strong> <a href="projects.html#school">Some school projects</a>.</p>
+
+<p class="margin time">2009-2011</p>
+
+<p>서귀포 고등학교 생활 : <sup id="fnref:prepa"></sup> 2011년도 2월에 졸업을 하였습니다.</p>
+
+<h3 id="languages">Languages</h3>
+
+<p class="margin note">I read books and attend to courses in English.</p>
+
+<p><strong>French</strong> — Mother tongue<br />
+<strong>English</strong> — Written and spoken as a professional skill<br />
+Italian — Written and spoken for everyday life (should improve soon).<br />
+German — Basics</p>
+
+<h3 id="programming-languages-frameworks-and-tools">Programming languages, frameworks and tools</h3>
+
+<ul class="inline-list">
+  <li><a href="/projects/school/compiler-for-java-subset" title="Example project: a compiler">Ada</a></li>
+  <li><a href="/projects/school/various-c-projects" title="Example project: a shell">C</a></li>
+  <li><a href="/projects/school/AgileTouch-distributed-scrum" title="Example project: augmented agile backlog">C++</a> (Qt, OpenCV)</li>
+  <li>Java (J2EE)</li>
+  <li>SQL</li>
+  <li>Shell and Makefiles</li>
+  <li><a href="#sogilis" title="Example project: accounting application">Javascript</a> (Ember, EPF, Mocha, Chai)</li>
+  <li>xHTML/CSS</li>
+  <li><a href="/projects/school/design/robair" title="Example project: a robot">Python</a></li>
+  <li>Ruby (on Rails)</li>
+  <li>Scilab</li>
+  <li>PHP</li>
+  <li>R</li>
+  <li>Prolog</li>
+  <li>CaML</li>
+</ul>
+
+<p class="margin note">I am a Linux and open-source enthusiast.</p>
+
+<p><strong>Development tools: <code>vim</code>, <code>git</code>, Eclipse.</strong>
+Publishing and design: LibreOffice, LaTeX, the Gimp, Inkscape, FontForge.</p>
+
+<h3 id="interests">Interests</h3>
+
+<p>Typography, reading novels and web comics, drawing stuff (including
+<a href="/projects/design/fantasquesansmono-font">fonts</a>), listening to music, origami, cooking and tea.
+I was involved for one year in the students’ Art Club of my
+French engineering school, as treasurer and web designer.</p>
+
+<div class="footnotes">
+  <ol>
+    <li id="fn:prepa">
+
+      <p>Intensive study of both mathematics and physics in order to prepare for
+entrance examinations to the French Grandes Écoles. Usually lasts two or
+three years just after the end of high school. <a href="#fnref:prepa" class="reversefootnote">&#8617;</a></p>
+    </li>
+  </ol>
+</div>
+
+          </div>
+
+          <div class="footer">
+            <div>
+              <p>
+              Jany Belluz<br />
+              Computer Engineering student<br />
+              Programmer &amp; amateur typographer
+              </p>
+            </div>
+            <div>
+              <p>
+              <a  href="/index.html">blog</a><br />
+              <a  class="current"  href="/resume.html">résumé</a><br />
+              <a  href="/projects.html">projects</a>
+              </p>
+            </div>
+            <div>
+              <p>
+              <a href="mailto:&#106;&#097;&#110;&#121;&#046;&#098;&#101;&#108;&#108;&#117;&#122;&#064;&#104;&#111;&#116;&#109;&#097;&#105;&#108;&#046;&#102;&#114;">Email</a><br/>
+              <a href="http://www.linkedin.com/pub/jany-belluz/79/ba5/16b">LinkedIn</a><br />
+              <a href="https://github.com/belluzj">GitHub</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+    </body>
 </html>
