--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,11 @@
-<html>
-<head>
- <meta charset="utf-8">
- 
-</head>
-<body>
+<HTML>
+<HEAD>
+<META http-equiv="Content-Type"
+content="text/html; charset=EUC-KR">
+<TITLE>projects</TITLE>
+</HEAD>
+<BODY>
+<P>준비중입니다...</P>
 
-<p> 준비중입니다 ...</p>
-
-</body>
-</html>
+</BODY>
+</HTML>
