마크다운으로 가기 추가

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p class="margin"><img src="현승호.png" alt="Face" /></p>
 
 <h2 id="rsum">자기소개</h2>
-
+<a href = 'https://github.com/scsc3313/scsc3313.github.io/blob/master/resume.md'>마크다운으로 가기</a>
 <p><strong>안녕하세요. 저는 컴퓨터공학과 학생입니다.</strong><br />
 웹 개발과 웹 디자인을 좋아합니다. <a href="https://github.com/scsc3313">github.com/scsc3313</a><br>
 나이는 24살이고 3학년입니다. <br>
