--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 
 <p class="margin time">2014. 3. ~ 2014. 6.</p>
 
-<p id="sogilis"><strong>2014 포트폴리오 경진대회 장려상</a> in
-Grenoble:</strong> <br>&nbsp;&nbsp;2014공학교육혁신센터 포트폴리오 경진대회에서 장려상을 수상하였습니다.</p>
+<p id="sogilis"><strong>2014 포트폴리오 경진대회 장려상</a></strong> <br>&nbsp;&nbsp;2014공학교육혁신센터 포트폴리오 경진대회에서 장려상을 수상하였습니다.</p>
 
 <h3 id="education"><strong>학습</strong></h3>
 
