--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="header">
             <h1 class="title ">Hyun SeungHo</h1>
             <a  class="extra current " href="index.html">home</a>
-            <a  class="extra " href="scsc3313.dothome.co.kr">projects</a>
+            <a  class="extra " href="http://scsc3313.dothome.co.kr">projects</a>
             
             <a class="lang  current " href="index.html">한국어</a>
       
