수상경력, 학습 추가

--- a/index.html
+++ b/index.html
@@ -33,28 +33,64 @@
 <h2 id="rsum">자기소개</h2>
 <p><strong>안녕하세요. 저는 컴퓨터공학과 학생입니다.</strong><br />
 웹 개발과 웹 디자인을 좋아합니다. <a href="https://github.com/scsc3313">github.com/scsc3313</a><br>
-나이는 24살이고 3학년입니다. <br>
+나이는 25살이고 4학년입니다. <br>
 창의적인 사람이 되기 위해 노력합니다.</p>
 
 <h3 class="clearer" id="employment"><strong>수상 경력</strong></h3>
+
+<p class="margin time">2015. 12. 24.</p>
+
+<p><strong>2015 창업캠프 창업아이디어 경진대회 장려상</strong> <br>&nbsp;&nbsp;'스마트 모빌' 이라는 영유아가 뒤집어서 자고 있는지 아닌지 확인을 해주는 IOT를 개발하였습니다. </p>
+
+<p class="margin time">2015. 10. 13.</p>
+
+<p><strong>제주대학교 컴퓨터공학과 작품전시회 우수상 수상</strong> <br>&nbsp;&nbsp;'일로와' 라는 어플리케이션을 만들어 MICE 행사요원 같은 일일 단기 아르바이트 인원을 쉽게 구하고, 쉽게 관리할 수 있도록 하였습니다.</p>
+
+<p class="margin time">2015. 3. ~ 2017. 2.</p>
+
+<p><strong>정수장학회 장학금 수여</strong> <br>&nbsp;&nbsp;운이좋게 정수장학회의 장학생으로 선정이 되어 졸업때 까지 장학금을 수여받았습니다.</p>
 
 <p class="margin time">2014. 6. ~ 2014. 12.</p>
 
 <p><strong>2014 공학교육혁신센터  캡스톤디자인 최우수상 수상</strong> <br>&nbsp;&nbsp;'제대로' 라는 어플리케이션을 만들어 학생들에게 학교주변 음식점 정보, 버스 실시간 위치 정보, 자주 사용하는 게시판 이용기능, 문의하기 기능을 제공하였습니다. </p>
 
+<p class="margin time">2014. 10. ~ 2014. 11.</p>
+
+<p><strong>2014 제주대학교 컴퓨터공학과 작품전시회 우수상 수상</strong> <br>&nbsp;&nbsp;'제대 음식점' 이라는 어플리케이션을 만들어 학생들에게 학교주변 음식점 정보와 위치를 알려주어 편의성을 제공하였습니다. </p>
+
+ <p class="margin time">2014. 10. ~ 2014. 11.</p>
+
+<p><strong>2014 제주대학교 컴퓨터공학과 작품전시회 장려상 수상</strong> <br>&nbsp;&nbsp;'제주 셔틀 버스 알림' 어플리케이션을 만들어 학생들에게 버스 시간표와 현재 버스의 실시간 위치를 알려주어 편의성을 제공하였습니다. </p>
+
 <p class="margin time">2014. 3. ~ 2014. 6.</p>
 
 <p id="sogilis"><strong>2014 포트폴리오 경진대회 장려상</a></strong> <br>&nbsp;&nbsp;2014공학교육혁신센터 포트폴리오 경진대회에서 장려상을 수상하였습니다.</p>
 
-<h3 id="education"><strong>학습</strong></h3>
+<h3 id="education"><strong>학습</strong></h3
 
-<p class="margin time">2014. 3. ~ ing</p>
+<p class="margin time">201. 1. 29. ~ 2. 4.</p>
 
-<p><strong>컴퓨터공학과 재학중</strong><br>->제주대학교 컴퓨터공학과를 재학하면서 강의와 프로젝트를 통해 학습하고 있습니다.</p>
+<p><strong>IS-DEC(International Student Joint Capstone Design Project)</strong><br>->IS-CAPS에 포함된 IS-DEC은 1주일간에 말레이시아에서 이루어졌었던 캠프입니다. 말레이사아, 인도네이사, 싱가포르 친구들과 함께 프로젝트를 진행하며 다른 지역의 친구, 문화를 깨닫고 새로운 아이디어를 창출해내는 프로젝트를 진행하였습니다.</p>
+
+<p class="margin time">2015. 12. 21. ~ 12. 22.</p>
+
+<p><strong>개방형 IoT플래폼 기반 서비스 개발 교육</strong><br>->전북대학교 공학교육혁신센터에서 주관한 IoT플랫폼 교육에 참가하였습니다. 실제 에디슨 보드를 이용하여 LED를 만들었고, 스마트 폰과 서버를 이용해 LED를 제어하는 기술을 배웠습니다.</p>
+
+<p class="margin time">2015. 11. 13. ~ 11. 15.</p>
+
+<p><strong>2015 아두이노-드론 창의 인재 아카데미</strong><br>->제주대학교 공학교육혁신센터에서 주관한 아두이노-드론 창의 인재 아카데미에서 드론을 직접 만들고, 소프트웨어로 PID 제어와 캘리브레이션을 하는 교육을 받았습니다.</p>
+
+<p class="margin time">2014. 5. 14. ~ 5. 16.</p>
+
+<p><strong>프레젠테이션 아카데미</strong><br>->제주대학교에서 주최한 2014 실전대비 프레젠테이션 아카데미를 수료하여, 발표를 하거나 대화를 할 때에 자신감과 방법을 얻을 수 있었습니다.</p>
+
+<p class="margin time">2014. 3. ~ 2017. 2.</p>
+
+<p><strong>컴퓨터공학과 재학중</strong><br>->제주대학교 컴퓨터공학과를 재학하면서 강의 수강과 프로젝트를 통해 학습하고 있습니다.</p>
 
 <p class="margin time">2012. 2. ~ 2013. 11.</p>
 
-<p><strong>육군교육사령부 CERT병</strong><br>->대전 육군교육사령부에서 약 2년간 CERT병으로 근무를 하였습니다. 여러가지 네트워크 기술에 대해 배웠습니다.</p>
+<p><strong>육군교육사령부 CERT병</strong><br>->대전 육군교육사령부에서 약 2년간 CERT병으로 근무를 하였습니다. 교육사령부에 사용되는 전 서버 관리와 IDS, IPS를 이용한 해킹 방지를 하였고, 실제적으로 하드웨어 조립과 간부들의 편의성을 위해 소프트웨어를 개발하였습니다.</p>
 
 <p class="margin time">2011. 3 ~ 2011. 12.</p>
 
@@ -81,7 +117,9 @@
 <ul>
 
   <li>Java</li>
+  <li>SpringFrameWork</li>
   <li>JavaScript</li>
+  <li>Php</li>
   <li>Android</li>
   <li>C++</li>
   <li>C#</li>
@@ -90,17 +128,15 @@
 
 <p class="margin note">개발을 좋아합니다</p>
 
-<p><strong>Development tools: <code>Eclipse</code>, <code>git</code>, SubLime Text 3</strong>
+<p><strong>Development tools: <code>IntelliJ</code>, <code>Eclipse</code>, <code>git</code>, SubLime Text 3</strong>
 ,Atom, Android studio, Visual Stdio</p>
 
 <h3 id="interests">Interests</h3>
 
-<li>저의 취미는 독서를 좋아하고, 웹 사이트 개발을 좋아합니다.</li>
-<li>발라드 음악을 듣는 것을 좋아하며, 축구 하는 것을 좋아합니다.</li>
+<li>저의 취미는 축구이며, 웹 사이트 개발을 좋아합니다.</li>
 <li>제주대학교 컴퓨터공학과 '노을' 축구 동아리에 참여하고 있습니다.</li>
 <li>2014 컴퓨터공학과 체육부장으로 활동을 하였습니다.</li>
-
-
+<li>2015 컴퓨터공학과 기획부장으로 활동을 하였습니다.</li>
 
           </div>
 
@@ -116,7 +152,7 @@
               <p>
               <a  href="index.html">home</a><br />
               <a  class="current"  href="index.html">résumé</a><br />
-              <a  href="projects.html">projects</a>
+              <a  href="http://scsc3313.dothome.co.kr">projects</a>
               </p>
             </div>
             <div>
