--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
 <p id="sogilis"><strong>2014 포트폴리오 경진대회 장려상</a></strong> <br>&nbsp;&nbsp;2014공학교육혁신센터 포트폴리오 경진대회에서 장려상을 수상하였습니다.</p>
 
-<h3 id="education"><strong>학습</strong></h3
+<h3 id="education"><strong>학습</strong></h3>
 
-<p class="margin time">201. 1. 29. ~ 2. 4.</p>
+<p class="margin time">2016. 1. 29. ~ 2. 4.</p>
 
 <p><strong>IS-DEC(International Student Joint Capstone Design Project)</strong><br>->IS-CAPS에 포함된 IS-DEC은 1주일간에 말레이시아에서 이루어졌었던 캠프입니다. 말레이사아, 인도네이사, 싱가포르 친구들과 함께 프로젝트를 진행하며 다른 지역의 친구, 문화를 깨닫고 새로운 아이디어를 창출해내는 프로젝트를 진행하였습니다.</p>
 
