추가 및 수정

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="header">
             <h1 class="title ">Hyun SeungHo</h1>
             <a  class="extra current " href="index.html">home</a>
-            <a  class="extra " href="http://scsc3313.dothome.co.kr">projects</a>
+            <a  class="extra " href="http://scsc3313.dothome.co.kr">찍먹</a>
             
             <a class="lang  current " href="index.html">한국어</a>
       
@@ -36,15 +36,27 @@
 나이는 25살이고 4학년입니다. <br>
 창의적인 사람이 되기 위해 노력합니다.</p>
 
+<h3 class="clearer" id="employment"><strong>자격증</strong></h3>
+<p class="margin time">2015. 8.</p>
+<p><strong>사무자동화 산업기사</strong></p>
+<p class="margin time">2012. 1.</p>
+<p><strong>운전면허 보통 1급</strong></p>
+<p class="margin time">2004. 9.</p>
+<p><strong>워드프로세서 1급</strong></p>
+
 <h3 class="clearer" id="employment"><strong>수상 경력</strong></h3>
 
 <p class="margin time">2015. 12. 24.</p>
 
 <p><strong>2015 창업캠프 창업아이디어 경진대회 장려상</strong> <br>&nbsp;&nbsp;'스마트 모빌' 이라는 영유아가 뒤집어서 자고 있는지 아닌지 확인을 해주는 IOT를 개발하였습니다. </p>
 
+<p class="margin time">2015. 12. 5.</p>
+
+<p><strong>2015 공학교육혁신센터 캡스톤 디자인 장려상</strong> <br>&nbsp;&nbsp;'찍먹' 이라는 음식이라는 주제를 가진 SNS를 개발하였습니다. 음식 사진을 클릭하면 음식점의 위치를 확인할 수 있습니다.</p>
+
 <p class="margin time">2015. 10. 13.</p>
 
-<p><strong>제주대학교 컴퓨터공학과 작품전시회 우수상 수상</strong> <br>&nbsp;&nbsp;'일로와' 라는 어플리케이션을 만들어 MICE 행사요원 같은 일일 단기 아르바이트 인원을 쉽게 구하고, 쉽게 관리할 수 있도록 하였습니다.</p>
+<p><strong>제주대학교 컴퓨터공학과 작품전시회 우수상</strong> <br>&nbsp;&nbsp;'일로와' 라는 어플리케이션을 만들어 MICE 행사요원 같은 일일 단기 아르바이트 인원을 쉽게 구하고, 쉽게 관리할 수 있도록 하였습니다.</p>
 
 <p class="margin time">2015. 3. ~ 2017. 2.</p>
 
@@ -52,15 +64,15 @@
 
 <p class="margin time">2014. 6. ~ 2014. 12.</p>
 
-<p><strong>2014 공학교육혁신센터  캡스톤디자인 최우수상 수상</strong> <br>&nbsp;&nbsp;'제대로' 라는 어플리케이션을 만들어 학생들에게 학교주변 음식점 정보, 버스 실시간 위치 정보, 자주 사용하는 게시판 이용기능, 문의하기 기능을 제공하였습니다. </p>
+<p><strong>2014 공학교육혁신센터  캡스톤디자인 최우수상</strong> <br>&nbsp;&nbsp;'제대로' 라는 어플리케이션을 만들어 학생들에게 학교주변 음식점 정보, 버스 실시간 위치 정보, 자주 사용하는 게시판 이용기능, 문의하기 기능을 제공하였습니다. </p>
 
 <p class="margin time">2014. 10. ~ 2014. 11.</p>
 
-<p><strong>2014 제주대학교 컴퓨터공학과 작품전시회 우수상 수상</strong> <br>&nbsp;&nbsp;'제대 음식점' 이라는 어플리케이션을 만들어 학생들에게 학교주변 음식점 정보와 위치를 알려주어 편의성을 제공하였습니다. </p>
+<p><strong>2014 제주대학교 컴퓨터공학과 작품전시회 우수상</strong> <br>&nbsp;&nbsp;'제대 음식점' 이라는 어플리케이션을 만들어 학생들에게 학교주변 음식점 정보와 위치를 알려주어 편의성을 제공하였습니다. </p>
 
  <p class="margin time">2014. 10. ~ 2014. 11.</p>
 
-<p><strong>2014 제주대학교 컴퓨터공학과 작품전시회 장려상 수상</strong> <br>&nbsp;&nbsp;'제주 셔틀 버스 알림' 어플리케이션을 만들어 학생들에게 버스 시간표와 현재 버스의 실시간 위치를 알려주어 편의성을 제공하였습니다. </p>
+<p><strong>2014 제주대학교 컴퓨터공학과 작품전시회 장려상</strong> <br>&nbsp;&nbsp;'제주 셔틀 버스 알림' 어플리케이션을 만들어 학생들에게 버스 시간표와 현재 버스의 실시간 위치를 알려주어 편의성을 제공하였습니다. </p>
 
 <p class="margin time">2014. 3. ~ 2014. 6.</p>
 
@@ -102,6 +114,11 @@
 
 <h3 id="valunteering">봉사활동</h3>
 
+<p class="margin time">2014. 5. ~ 2014. 6.</p>
+
+<p><strong>장애 IT 경진대회</strong> <br>
+->제주시 춘강에서 열린 장애 IT 경진대회에서 보조와 채점을 하는 <br>봉사를 하였습니다.<br/>
+
 <p class="margin time">2013. 6. ~ 2013. 10.</p>
 
 <p><strong>학습봉사</strong> <br>
@@ -128,7 +145,7 @@
 
 <p class="margin note">개발을 좋아합니다</p>
 
-<p><strong>Development tools: <code>IntelliJ</code>, <code>Eclipse</code>, <code>git</code>, SubLime Text 3</strong>
+<p><strong>Development tools: <code>IntelliJ</code>, <code>Eclipse</code>, <code>SourceTree</code>, SubLime Text 3</strong>
 ,Atom, Android studio, Visual Stdio</p>
 
 <h3 id="interests">Interests</h3>
@@ -152,7 +169,7 @@
               <p>
               <a  href="index.html">home</a><br />
               <a  class="current"  href="index.html">résumé</a><br />
-              <a  href="http://scsc3313.dothome.co.kr">projects</a>
+              <a  href="http://scsc3313.dothome.co.kr">찍먹</a>
               </p>
             </div>
             <div>
