이미지 추가

--- a/project.html
+++ b/project.html
@@ -69,7 +69,7 @@
 
                   <div class="article">
                     <div class="left">
-                      <img class="thumnail" src="현승호.png">
+                      <img class="thumnail" src="images/mobile.png">
                     </div>
                     <div class="contents right">
                       <h4 class="project-title">스마트모빌</h4>
@@ -83,7 +83,7 @@
 
                   <div class="article">
                     <div class="left">
-                      <img class="thumnail" src="현승호.png">
+                      <img class="thumnail" src="images/jjickmuk.png">
                     </div>
                     <div class="contents right">
                       <h4 class="project-title">찍먹</h4>
@@ -97,11 +97,11 @@
 
                   <div class="article">
                     <div class="left">
-                      <img class="thumnail" src="현승호.png">
+                      <img class="thumnail" src="images/illowa.png">
                     </div>
                     <div class="contents right">
                       <h4 class="project-title">일로와</h4>
-                      <p class="margin time">2015. 10. 13.</p>
+                      <p class="margin time">2015. 6. ~ 2015. 10.</p>
                       <div>&nbsp;&nbsp;'일로와' 라는 어플리케이션을 만들어 MICE 행사요원 같은 일일 단기 아르바이트 인원을 쉽게 구하고, 쉽게 관리할 수 있도록 하였습니다.</div>
                       <div>Tools : Android Studio &nbsp;&nbsp;         &nbsp;&nbsp;Language : Android </div>
                       <div>수상 내역 <a class="check" href="#">확인</a> App <a class="check" href="#">확인</a></div>
@@ -111,7 +111,7 @@
 
                   <div class="article">
                     <div class="left">
-                      <img class="thumnail" src="현승호.png">
+                      <img class="thumnail" src="images/jejunu.png">
                     </div>
                     <div class="contents right">
                       <h4 class="project-title">제대로</h4>
@@ -125,11 +125,11 @@
 
                   <div class="article">
                     <div class="left">
-                      <img class="thumnail" src="현승호.png">
+                      <img class="thumnail" src="images/bab.png">
                     </div>
                     <div class="contents right">
                       <h4 class="project-title">제대 음식점</h4>
-                      <p class="margin time">2014. 10. ~ 2014. 11.</p>
+                      <p class="margin time">2014. 3. ~ 2014. 6.</p>
                       <div>&nbsp;&nbsp; '제대 음식점' 이라는 어플리케이션을 만들어 학생들에게 학교주변 음식점 정보와 위치를 알려주어 편의성을 제공하였습니다.</div>
                       <div>Tools : Eclipse &nbsp;&nbsp;         &nbsp;&nbsp;Language : Android </div>
                       <div>수상 내역 <a class="check" href="#">확인</a> 발표자료 <a class="check" href="#">확인</a></div>
@@ -139,11 +139,11 @@
 
                   <div class="article">
                     <div class="left">
-                      <img class="thumnail" src="현승호.png">
+                      <img class="thumnail" src="images/bus.png">
                     </div>
                     <div class="contents right">
                       <h4 class="project-title">제주 셔틀 버스 알림</h4>
-                      <p class="margin time">2014. 10. ~ 2014. 11.</p>
+                      <p class="margin time">2014. 3. ~ 2014. 6.</p>
                       <div>&nbsp;&nbsp;  '제주 셔틀 버스 알림' 어플리케이션을 만들어 학생들에게 버스 시간표와 현재 버스의 실시간 위치를 알려주어 편의성을 제공하였습니다.</div>
                       <div>Tools : Eclipse &nbsp;&nbsp;         &nbsp;&nbsp;Language : Android </div>
                       <div>수상 내역 <a class="check" href="#">확인</a> 발표자료 <a class="check" href="#">확인</a></div>
@@ -155,7 +155,7 @@
                   <h3 class="clearer" id="employment"><strong>학습</strong></h3>
                   <div class="article">
                     <div class="left">
-                      <img class="thumnail" src="현승호.png">
+                      <img class="thumnail" src="images/camp.png">
                     </div>
                     <div class="contents right">
                       <h4 class="project-title">IS-DEC</h4>
@@ -167,7 +167,7 @@
                   </div>
                   <div class="article">
                     <div class="left">
-                      <img class="thumnail" src="현승호.png">
+                      <img class="thumnail" src="images/iot.png">
                     </div>
                     <div class="contents right">
                       <h4 class="project-title">IoT 플랫폼 교육</h4>
@@ -179,7 +179,7 @@
                   </div>
                   <div class="article">
                     <div class="left">
-                      <img class="thumnail" src="현승호.png">
+                      <img class="thumnail" src="images/drone.png">
                     </div>
                     <div class="contents right">
                       <h4 class="project-title">드론 아카데미</h4>
@@ -191,7 +191,7 @@
                   </div>
                   <div class="article">
                     <div class="left">
-                      <img class="thumnail" src="현승호.png">
+                      <img class="thumnail" src="images/presentation.png">
                     </div>
                     <div class="contents right">
                       <h4 class="project-title">프레젠테이션 교육</h4>
@@ -203,7 +203,7 @@
                   </div>
                   <div class="article">
                     <div class="left">
-                      <img class="thumnail" src="현승호.png">
+                      <img class="thumnail" src="images/military.png">
                     </div>
                     <div class="contents right">
                       <h4 class="project-title">교육사령부 CERT병</h4>
@@ -214,7 +214,7 @@
                   </div>
                   <div class="article">
                     <div class="left">
-                      <img class="thumnail" src="현승호.png">
+                      <img class="thumnail" src="images/computer.png">
                     </div>
                     <div class="contents right">
                       <h4 class="project-title">차세대 통신망 연구실</h4>
