--- a/project.html
+++ b/project.html
@@ -76,7 +76,7 @@
                       <p class="margin time">2015. 12. 24.</p>
                       <div>&nbsp;&nbsp;'스마트 모빌'은 라즈베리 파이를 이용하여 모빌에 카메라를 설치하였고 영유아의 안전을 위해 개발되었습니다. 영유아가 뒤집어서 자고 있는지 아닌지 확인을 해주는 IOT를 개발하였습니다.</div>
                       <div>Tools : Rasberry Pie &nbsp;&nbsp;         &nbsp;&nbsp;Language : Python </div>
-                      <div>수상 내역 <a class="check" href="#">확인</a> 발표자료 <a class="check" href="#">확인</a></div>
+                      <div>수상 내역 <a class="check" href="images/prize/mobile.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 발표자료 <a class="check" href="data/mobile.pptx">확인</a></div>
                     </div>
                     <div class="clear"></div>
                   </div>
@@ -90,7 +90,7 @@
                       <p class="margin time">2015. 12. 5.</p>
                       <div>&nbsp;&nbsp; '찍고먹자' 라는 음식이라는 주제를 가진 SNS를 개발하였습니다. 음식 사진을 클릭하면 음식점의 위치를 확인할 수 있습니다. 음식점마다 사진 갯수를 확인할 수 있어 인기 있는 음식점을 한 눈에 확인할 수 있습니다.</div>
                       <div>Tools : Sublime Text 3 &nbsp;&nbsp;         &nbsp;&nbsp;Language : Php Jquery </div>
-                      <div>수상 내역 <a class="check" href="#">확인</a> 사이트 <a class="check" href="http://scsc3313.dothome.co.kr">확인</a></div>
+                      <div>수상 내역 <a class="check" href="images/prize/jjickmuk.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 사이트 <a class="check" href="http://scsc3313.dothome.co.kr">확인</a></div>
                     </div>
                     <div class="clear"></div>
                   </div>
@@ -103,8 +103,8 @@
                       <h4 class="project-title">일로와</h4>
                       <p class="margin time">2015. 6. ~ 2015. 10.</p>
                       <div>&nbsp;&nbsp;'일로와' 라는 어플리케이션을 만들어 MICE 행사요원 같은 일일 단기 아르바이트 인원을 쉽게 구하고, 쉽게 관리할 수 있도록 하였습니다.</div>
-                      <div>Tools : Android Studio &nbsp;&nbsp;         &nbsp;&nbsp;Language : Android </div>
-                      <div>수상 내역 <a class="check" href="#">확인</a> App <a class="check" href="#">확인</a></div>
+                      <div>Tools : Android Studio &nbsp;&nbsp;         &nbsp;&nbsp;Language : Java </div>
+                      <div>수상 내역 <a class="check" href="images/prize/illowa.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> App <a class="check" href="https://play.google.com/store/apps/details?id=com.jaisonoh.openhttp" target="_blank">확인</a></div>
                     </div>
                     <div class="clear"></div>
                   </div>
@@ -117,8 +117,8 @@
                       <h4 class="project-title">제대로</h4>
                       <p class="margin time">2014. 6. ~ 2014. 12.</p>
                       <div>&nbsp;&nbsp;'제대로' 라는 어플리케이션을 만들어 학생들에게 학교주변 음식점 정보, 버스 실시간 위치 정보, 자주 사용하는 게시판 이용기능, 문의하기 기능을 제공하였습니다.</div>
-                      <div>Tools : Eclipse &nbsp;&nbsp;         &nbsp;&nbsp;Language : Android </div>
-                      <div>수상 내역 <a class="check" href="#">확인</a> 발표자료 <a class="check" href="#">확인</a></div>
+                      <div>Tools : Eclipse &nbsp;&nbsp;         &nbsp;&nbsp;Language : Java </div>
+                      <div>수상 내역 <a class="check" href="images/prize/jejunu.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 발표자료 <a class="check" href="data/jejunu.pptx">확인</a></div>
                     </div>
                     <div class="clear"></div>
                   </div>
@@ -131,8 +131,8 @@
                       <h4 class="project-title">제대 음식점</h4>
                       <p class="margin time">2014. 3. ~ 2014. 6.</p>
                       <div>&nbsp;&nbsp; '제대 음식점' 이라는 어플리케이션을 만들어 학생들에게 학교주변 음식점 정보와 위치를 알려주어 편의성을 제공하였습니다.</div>
-                      <div>Tools : Eclipse &nbsp;&nbsp;         &nbsp;&nbsp;Language : Android </div>
-                      <div>수상 내역 <a class="check" href="#">확인</a> 발표자료 <a class="check" href="#">확인</a></div>
+                      <div>Tools : Eclipse &nbsp;&nbsp;         &nbsp;&nbsp;Language : Java </div>
+                      <div>수상 내역 <a class="check" href="images/prize/bab.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
                     </div>
                     <div class="clear"></div>
                   </div>
@@ -145,8 +145,8 @@
                       <h4 class="project-title">제주 셔틀 버스 알림</h4>
                       <p class="margin time">2014. 3. ~ 2014. 6.</p>
                       <div>&nbsp;&nbsp;  '제주 셔틀 버스 알림' 어플리케이션을 만들어 학생들에게 버스 시간표와 현재 버스의 실시간 위치를 알려주어 편의성을 제공하였습니다.</div>
-                      <div>Tools : Eclipse &nbsp;&nbsp;         &nbsp;&nbsp;Language : Android </div>
-                      <div>수상 내역 <a class="check" href="#">확인</a> 발표자료 <a class="check" href="#">확인</a></div>
+                      <div>Tools : Eclipse &nbsp;&nbsp;         &nbsp;&nbsp;Language : Java </div>
+                      <div>수상 내역 <a class="check" href="images/prize/bus.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 발표자료 <a class="check" href="https://play.google.com/store/apps/details?id=kr.ac.jejunu.ref.univbus" target="_blank">확인</a></div>
                     </div>
                     <div class="clear"></div>
                   </div>
@@ -161,7 +161,19 @@
                       <h4 class="project-title">IS-DEC</h4>
                       <p class="margin time">2016. 1. 29. ~ 2. 4.</p>
                       <div>&nbsp;&nbsp;IS-CAPS에 포함된 IS-DEC(International Student Joint Capstone Design Project)은 1주일간에 말레이시아에서 이루어졌었던 캠프입니다. 말레이사아, 인도네이사, 싱가포르 친구들과 함께 프로젝트를 진행하며 다른 지역의 친구, 문화를 깨닫고 새로운 아이디어를 창출해내는 프로젝트를 진행하였습니다.</div>
-                      <div>수료 내역 <a class="check" href="#">확인</a> 확인자료 <a class="check" href="#">확인</a></div>
+                      <div>수료 내역 <a class="check" href="images/prize/camp.jpg"  onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
+                    </div>
+                    <div class="clear"></div>
+                  </div>
+                  <div class="article">
+                    <div class="left">
+                      <img class="thumnail" src="images/project.png">
+                    </div>
+                    <div class="contents right">
+                      <h4 class="project-title">프로젝트 오일러</h4>
+                      <p class="margin time">2016. 1. 4. ~ ing</p>
+                      <div>&nbsp;&nbsp;프로젝트 오일러 문제를 풀면서 알고리즘 공부를 하고 있습니다. md 파일을 이용해 간단히 제가 푸는 방법에 대해 설명을 하였습니다. java를 기반으로 코딩 되었습니다.</div>
+                      <div>확인자료 <a class="check" href="https://github.com/scsc3313/JavaStudy/tree/master/projectEuler" target="_blank">확인</a></div>
                     </div>
                     <div class="clear"></div>
                   </div>
@@ -173,7 +185,7 @@
                       <h4 class="project-title">IoT 플랫폼 교육</h4>
                       <p class="margin time">2015. 12. 21. ~ 12. 22.</p>
                       <div>&nbsp;&nbsp;전북대학교 공학교육혁신센터에서 주관한 IoT플랫폼 교육에 참가하였습니다. 실제 에디슨 보드를 이용하여 LED를 만들었고, 스마트 폰과 서버를 이용해 LED를 제어하는 기술을 배웠습니다.</div>
-                      <div>수료 내역 <a class="check" href="#">확인</a></div>
+                      <div>수료 내역 <a class="check" href="images/prize/iot.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
                     </div>
                     <div class="clear"></div>
                   </div>
@@ -185,7 +197,7 @@
                       <h4 class="project-title">드론 아카데미</h4>
                       <p class="margin time">2015. 11. 13. ~ 11. 15.</p>
                       <div>&nbsp;&nbsp;제주대학교 공학교육혁신센터에서 주관한 아두이노-드론 창의 인재 아카데미에서 드론을 직접 만들고, 소프트웨어로 PID 제어와 캘리브레이션을 하는 교육을 받았습니다. 한라일보에서 간단한 인터뷰도 하였습니다.</div>
-                      <div>수료 내역 <a class="check" href="#">확인</a> 한라일보 <a class="check" href="#">확인</a></div>
+                      <div>수료 내역 <a class="check" href="images/prize/drone.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 한라일보 <a class="check" href="http://www.ihalla.com/read.php3?aid=1447652260520305164" target="_blank">확인</a></div>
                     </div>
                     <div class="clear"></div>
                   </div>
@@ -197,7 +209,7 @@
                       <h4 class="project-title">프레젠테이션 교육</h4>
                       <p class="margin time">2014. 5. 14. ~ 5. 16.</p>
                       <div>&nbsp;&nbsp;제주대학교에서 주최한 2014 실전대비 프레젠테이션 아카데미를 수료하여, 발표를 하거나 대화를 할 때에 자신감과 방법을 얻을 수 있었습니다.</div>
-                      <div>수료 내역 <a class="check" href="#">확인</a></div>
+                      <div>수료 내역 <a class="check" href="images/prize/presentation.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
                     </div>
                     <div class="clear"></div>
                   </div>
