정보처리기사 자격증 취득

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 창의적인 사람이 되기 위해 노력합니다.</p>
 
 <h3 class="clearer" id="employment"><strong>자격증</strong></h3>
+<p class="margin time">2016. 5.</p>
+<p><strong>정보처리 기사</strong></p>
 <p class="margin time">2015. 8.</p>
 <p><strong>사무자동화 산업기사</strong></p>
 <p class="margin time">2013. 4.</p>
@@ -104,16 +106,16 @@
 <p class="margin time">2014. 5. ~ 2014. 6.</p>
 
 <p><strong>장애 IT 경진대회</strong> <br>
-->제주시 춘강에서 열린 장애 IT 경진대회에서 보조와 채점을 하는 <br>봉사를 하였습니다.<br/>
+->제주시 춘강에서 열린 장애 IT 경진대회에서 보조와 채점을 하는 봉사를 하였습니다.
 
 <p class="margin time">2013. 6. ~ 2013. 10.</p>
 
 <p><strong>학습봉사</strong> <br>
-->대전청소년교육문화센터에서 방황하는 학생들에게 검정고시 합격을 위한 <br>학습봉사를 하였습니다.<br/>
+->대전청소년교육문화센터에서 방황하는 학생들에게 검정고시 합격을 위한 학습봉사를 하였습니다.
 
 <p class="margin time">2013. 12. 25.</p>
 <strong>사랑의 몰래산타</strong><br>
-->어려운 가정에서 즐거운 크리스마스를 보내지 못하는 아이들에게 뜻깊은 <br>크리스마스를 보내도록 도와주었습니다.<br/>
+->어려운 가정에서 즐거운 크리스마스를 보내지 못하는 아이들에게 뜻깊은 크리스마스를 보내도록 도와주었습니다.
 
 
 <h3 id="programming-languages-frameworks-and-tools"><strong>관심분야</strong></h3>
@@ -129,7 +131,7 @@
 
 <h3 id="interests"><strong>Interests</strong></h3>
 
-<li>저의 취미는 축구이며, 웹 앱 개발을 좋아합니다.</li>
+<li>저의 취미는 축구이며, 웹  개발을 좋아합니다.</li>
 <li>제주대학교 컴퓨터공학과 '노을' 축구 동아리에 참여하고 있습니다.</li>
 <li>2014 컴퓨터공학과 체육부장으로 활동을 하였습니다.</li>
 <li>2015 컴퓨터공학과 기획부장으로 활동을 하였습니다.</li>
