--- a/index.html
+++ b/index.html
@@ -1,168 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>Hyun SeungHo &mdash; Résumé</title>
-        <meta name="viewport" content="width=device-width">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="css/main.css" media="all">
-        <link rel="stylesheet" href="css/phone.css" media="all and (max-width:680px)">
-        <link rel="stylesheet" href="css/syntax.css"/>
-
     </head>
     <body>
-
-        <div class="site">
-          <div class="header">
-            <h1 class="title ">Hyun SeungHo</h1>
-            <a  class="extra current " href="index.html">home</a>
-            <a  class="extra " href="project.html">project</a>
-
-            <a class="lang  current " href="#">한국어</a>
-          </div>
-
-          <div class="content">
-            <p class="margin"><img src="현승호.png" alt="Face" /></p>
-
-<h2 id="rsum">자기소개</h2>
-<p><strong>안녕하세요. 저는 컴퓨터공학과 학생입니다.</strong><br />
-웹 개발과 웹 디자인을 좋아합니다. <a href="https://github.com/scsc3313">github.com/scsc3313</a><br>
-나이는 25살이고 4학년입니다. <br>
-창의적인 사람이 되기 위해 노력합니다.</p>
-
-<h3 class="clearer" id="employment"><strong>자격증 및 어학</strong></h3>
-<p class="margin time">2016. 5.</p>
-<p><strong>정보처리 기사</strong></p>
-<p class="margin time">2015. 8.</p>
-<p><strong>사무자동화 산업기사</strong></p>
-<p class="margin time">2013. 4.</p>
-<p><strong>문서 실무사 1급</strong></p>
-<p class="margin time">2004. 9.</p>
-<p><strong>워드프로세서 1급</strong></p>
-<p class="margin time">2016. 3.</p>
-<p><strong>TOEIC 805점</strong></p>
-
-<h3 class="clearer" id="employment"><strong>수상 경력</strong></h3>
-
-<p class="margin time">2015. 12. 24.</p>
-
-<p><strong>2015 창업캠프 창업아이디어 경진대회 장려상</strong></p>
-
-<p class="margin time">2015. 12. 5.</p>
-
-<p><strong>2015 공학교육혁신센터 캡스톤 디자인 장려상</strong></p>
-
-<p class="margin time">2015. 10. 3.</p>
-
-<p><strong>제주대학교 컴퓨터공학과 작품전시회 장려상</strong></p>
-
-<p class="margin time">2015. 3. ~ 2017. 2.</p>
-
-<p><strong>정수장학회 장학금 수여</strong></p>
-
-<p class="margin time">2014. 6. ~ 2014. 12.</p>
-
-<p><strong>2014 공학교육혁신센터  캡스톤디자인 최우수상</strong></p>
-
-<p class="margin time">2014. 3. ~ 2014. 6.</p>
-
-<p><strong>2014 제주대학교 컴퓨터공학과 작품전시회 우수상</strong></p>
-
- <p class="margin time">2014. 3. ~ 2014. 6.</p>
-
-<p><strong>2014 제주대학교 컴퓨터공학과 작품전시회 장려상</strong> </p>
-
-<p class="margin time">2014. 3. ~ 2014. 6.</p>
-
-<p id="sogilis"><strong>2014 포트폴리오 경진대회 장려상</a></strong></p>
-
-<h3 id="education"><strong>교육 활동</strong></h3>
-
-<p class="margin time">2016. 1. 29. ~ 2. 4.</p>
-
-<p><strong>IS-DEC(International Student Joint Capstone Design Project) 이수</strong></p>
-
-<p class="margin time">2015. 12. 21. ~ 12. 22.</p>
-
-<p><strong>개방형 IoT플래폼 기반 서비스 개발 교육 수료</strong></p>
-
-<p class="margin time">2015. 11. 13. ~ 11. 15.</p>
-
-<p><strong>2015 아두이노-드론 창의 인재 아카데미 수료</strong></p>
-
-<p class="margin time">2014. 5. 14. ~ 5. 16.</p>
-
-<p><strong>프레젠테이션 아카데미 수료</strong></p>
-
-<p class="margin time">2012. 2. ~ 2013. 11.</p>
-
-<p><strong>육군교육사령부 CERT병(정보보호병) 병장 만기 전역</strong></p>
-
-<p class="margin time">2014. 3 ~ </p>
-
-<p><strong>제주대학교 컴퓨터공학과 차세대통신망 연구실 ~ ing</strong></p>
-
-<h3 id="valunteering"><strong>봉사 활동</strong></h3>
-
-<p class="margin time">2014. 5. ~ 2014. 6.</p>
-
-<p><strong>장애 IT 경진대회</strong> <br>
-->제주시 춘강에서 열린 장애 IT 경진대회에서 보조와 채점을 하는 봉사를 하였습니다.
-
-<p class="margin time">2013. 6. ~ 2013. 10.</p>
-
-<p><strong>학습봉사</strong> <br>
-->대전청소년교육문화센터에서 방황하는 학생들에게 검정고시 합격을 위한 학습봉사를 하였습니다.
-
-<p class="margin time">2013. 12. 25.</p>
-<strong>사랑의 몰래산타</strong><br>
-->어려운 가정에서 즐거운 크리스마스를 보내지 못하는 아이들에게 뜻깊은 크리스마스를 보내도록 도와주었습니다.
-
-
-<h3 id="programming-languages-frameworks-and-tools"><strong>관심분야</strong></h3>
-
-<ul>
-
-  <li>Java</li>
-  <li>SpringFrameWork</li>
-  <li>JavaScript</li>
-  <li>Android</li>
-
-</ul>
-
-<h3 id="interests"><strong>Interests</strong></h3>
-
-<li>저의 취미는 축구이며, 웹  개발을 좋아합니다.</li>
-<li>제주대학교 컴퓨터공학과 '노을' 축구 동아리에 참여하고 있습니다.</li>
-<li>2014 컴퓨터공학과 체육부장으로 활동을 하였습니다.</li>
-<li>2015 컴퓨터공학과 기획부장으로 활동을 하였습니다.</li>
-
-          </div>
-
-          <div class="footer">
-            <div>
-              <p>
-              SeungHo Hyun<br />
-              Computer Engineering student<br />
-
-              </p>
-            </div>
-            <div>
-              <p>
-              <a  class="current" href="index.html">home</a><br />
-              <a  href="project.html">project</a>
-              </p>
-            </div>
-            <div>
-              <p>
-
-              <a href="http://github.com/scsc3313">github</a><br />
-              <a href="https://www.facebook.com/profile.php?id=100003175042715">facebook</a>
-              </p>
-            </div>
-          </div>
-        </div>
-
+<p><strong>안녕하세요. scsc3313 입니다.</strong><br />
     </body>
 </html>
